--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,40 @@
         <title>Qwerty Token ICO</title>
     </head>
     <body>
-        <header>
-            <h1>Qwerty Token ICO</h1>
-        </header>
+        <div class="container" style="width: 650px;">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class ="text-center">Qwerty Token ICO Sale</h1>
+                    <h3>Peple who say you cant make millions overnight are crazy, buy qwerty token now and see it happen</h3>
+                    <h5>THIS IS NOT A SCAM,But it will only work if you keep manifesting :)</h5>
+                    <h6>xoxo</h6>
+                    <img src="wink.jpg" class="rounded mx-auto d-block" width="300" height="300">
+                </div>
+            <div id="content"class="text-center">
+                <p>Token Price is <span class="token-price"></span> Ether. YOu currently have
+                    <span class="dapp-balance">Qwerty</span>
+                </p>
+                <form class="row g-3">
+                    <div class="col-auto">
+                      <label for="tokens" class="visually-hidden">Password</label>
+                      <input type="number" class="form-control" id="inputPassword2" placeholder="Tokens">
+                    </div>
+                    <div class="col-auto">
+                      <button type="submit" class="btn btn-primary mb-3">Buy</button>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                    <div class="tokens-sold">
+                        <h5>Tokens sold: </h5>
+                    </div>
+                    <div class="address">
+                        <h6>Connected Address is:</h6>
+                    </div>
+                  </form>
+            </div>
+            </div>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script type="text/javascript" src="web3/dist/web3.min.js"></script>
         <script src="js/app.js"></script>
