connect to metamask

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
                         <h5>Tokens sold: </h5>
                     </div>
                     <div class="address">
-                        <h6>Connected Address is:</h6>
+                        <p id="accountAddress">Connected Address is:</p>
                     </div>
                   </form>
             </div>
