render the token price

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,11 @@
                         <p id="accountAddress">Connected Address is:</p>
                     </div>
                   </form>
+                  <div class="loader">
+                      <p class="text-center">Loading......</p>
+                  </div>
+                  <div class="content" class="text-center" style="display: none;">....
+                </div>
             </div>
             </div>
         </div>
