--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
                     <img src="wink.jpg" class="rounded mx-auto d-block" width="300" height="300">
                 </div>
             <div id="content"class="text-center">
+                <div class="token-sold">
+                    <p>Tokens sold: </p>
+                </div>
                 <p>Token Price is <span class="token-price"></span> Ether. YOu currently have
                     <span class="dapp-balance">Qwerty</span>
                 </p>
@@ -32,9 +35,8 @@
                     <div class="progress">
                         <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
-                    <div class="tokens-sold">
-                        <h5>Tokens sold: </h5>
-                    </div>
+                      
+                    <p><span class="token-sold"></span> / <span class="tokens-available"></span> tokens sold</p>
                     <div class="address">
                         <p id="accountAddress">Connected Address is:</p>
                     </div>
