progress bar based on tokens sold and the available tokens

--- a/src/index.html
+++ b/src/index.html
@@ -33,9 +33,9 @@
                       <button type="submit" class="btn btn-primary mb-3">Buy</button>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div id="progress" class="progress-bar progress-bar-striped active" aria-valuemin="0" aria-valuemax="100">
+                        </div>
                       </div>
-                      
                     <p><span class="token-sold"></span> / <span class="tokens-available"></span> tokens sold</p>
                     <div class="address">
                         <p id="accountAddress">Connected Address is:</p>
