get qwerty balance

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                     <p>Tokens sold: </p>
                 </div>
                 <p>Token Price is <span class="token-price"></span> Ether. YOu currently have
-                    <span class="dapp-balance">Qwerty</span>
+                    <span class="qwerty-balance">Qwerty</span>
                 </p>
                 <form class="row g-3">
                     <div class="col-auto">
