delete home page meme

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
                 </div>
             <div id="content"class="text-center">
                 <div class="token-sold">
-                    <p>Tokens sold: </p>
+                    <p> </p>
                 </div>
                 <p>Token Price is <span class="token-price"></span> Ether. YOu currently have
                     <span class="qwerty-balance">Qwerty</span>
@@ -33,7 +33,7 @@
                         <div id="progress" class="progress-bar progress-bar-striped active" aria-valuemin="0" aria-valuemax="100">
                         </div>
                       </div>
-                    <p><span class="token-sold"></span> / <span class="tokens-available"></span> tokens sold</p>
+                    <p><span class="tokens-sold"></span> / <span class="tokens-available"></span> tokens sold</p>
                     <div class="address">
                         <p id="accountAddress">Connected Address is:</p>
                     </div>
